--- a/templets/index.html
+++ b/templets/index.html
@@ -180,6 +180,8 @@
             <h5 class="card-title text-success">Excess-Record Count</h5>
             {% if Ecount %}
             <p class="display-6 fw-bold">{{Ecount}}</p>
+            {% else %}
+            <p class="display-6 fw-bold">0</p>
             {% endif %}
             <span class="text-muted">Items in Excess File</span>
           </div>
@@ -270,7 +272,7 @@
               <p><strong>MRP:</strong> ₹{{ item.MRP }}</p>
               <p><strong>Brand:</strong> {{ item.BRANDNAME }}</p>
               <p><strong>Section:</strong> {{ item.SECTION }}</p>
-              <p><strong>Basic Rate:</strong> ₹{{ item.BASICRATE }}</p>
+              <!-- <p><strong>Basic Rate:</strong> ₹{{ item.BASICRATE }}</p> -->
               <p><strong>Season:</strong> {{ item.SEASON }}</p>
               <p><strong>Colours:</strong> {{ item.COLOURS }}</p>
             </div>
